--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ torch>=2.6.0
 spacy-curated-transformers>=0.3.0
 curated-transformers>=0.1.1
 curated-tokenizers>=0.0.9
+
+# Testing dependencies
+pytest==8.0.0
+pytest-cov==4.1.0
+httpx==0.26.0  # For FastAPI testing
+pytest-asyncio==0.23.5
